--- a/src/main/resources/templates/chatRooms.html
+++ b/src/main/resources/templates/chatRooms.html
@@ -250,7 +250,7 @@
             data: JSON.stringify({ username : selectedTexts }),
             success: function (data) {
                 console.log(data);
-                window.location.href = "http://localhost:8080" + data;
+                window.location.href = data;
             }, error: function () {
 
             }
