--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -42,20 +42,19 @@
             <!--인증 여부 값 hidden-->
             <input id="email-check" type="hidden" name="emailCheck" value="false" style="display:none">
 
-            <a href="#" id="sendEmail" style="
-            margin-left: -53%;
+            <a href="#" id="sendEmail" style="margin-left: -60%;
             font-size:14px;" onclick="sendEmail()">이메일 인증번호 보내기</a>
-            <div class="modal" style="margin-left:-17%;
-            margin-top:5px;">
+            <div class="modal" style="margin-top:5px; display: none;">
                 <div class="modal-content">
                     <!-- 모달 내용 -->
-                    <input type="text" id="email-password" name="email-password" placeholder="5분 이내 입력 부탁드립니다.">
+                    <input class="inputs" type="text" id="email-password" name="email-password" placeholder="5분 이내 입력 부탁드립니다.">
+                    <span id="timer">남은 시간: <span id="timerValue">05:00</span></span>
                     <button id="check-email-btn" onclick="checkEmail()">인증하기</button>
                 </div>
             </div>
 
             <input type="password" placeholder="비밀번호" name="password" id="password" class="input"/>
-            <a href="" id="showSignupPwBtn" style="margin-left: -70%; font-size:14px;">비밀번호 보기</a>
+            <a href="" id="showSignupPwBtn" style="margin-left: -80%; font-size:14px;">비밀번호 보기</a>
             <input type="text" placeholder="닉네임" name="nickname" id="nickname" class="input"/>
             <input type="text" placeholder="자기소개" name="introduce" id="introduce" class="input"/>
             <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 10px;">관리자
@@ -72,7 +71,7 @@
             <input type="text" placeholder="아이디" name="loginUsername" id="loginUsername" class="input"/>
             <input type="password" placeholder="비밀번호" name="loginPassword" id="loginPassword"
                    class="input"/>
-            <a href="" id="showLoginPwBtn" style="margin-left: -70%; font-size:14px;">비밀번호 보기</a>
+            <a href="" id="showLoginPwBtn" style="margin-left: -80%; font-size:14px;">비밀번호 보기</a>
             <button class="btn" onclick="onLogin()">로그인하기</button>
             <button id="login-kakao-btn"
                     onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=d7da621a3b256dc1ef5cc2ee72d98307&redirect_uri=http://localhost:8080/api/auth/kakao/callback&response_type=code'">
