--- a/src/main/resources/static/css/cardCalendar.css
+++ b/src/main/resources/static/css/cardCalendar.css
@@ -71,7 +71,7 @@ html, body {
 .title1{
     width: 50%;
     height: 100%;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -93,7 +93,7 @@ html, body {
 .bottom {
     height: 90%;
     width: 100%;
-    padding: 5px;
+    padding: 0px;
     background-color: transparent;
     text-align: center;
     display: flex;
@@ -132,6 +132,11 @@ html, body {
 
 .custom-event{
     cursor: pointer;
-    background-color: #4942E4;
+    background-color: #a6a2ff;
     border: none;
+    padding: 0px 3px;
+}
+
+.fc-h-event{
+    border: 1px solid #a6a2ff;
 }
