--- a/src/main/resources/static/css/backUsers.css
+++ b/src/main/resources/static/css/backUsers.css
@@ -23,6 +23,12 @@ html, body {
     align-items: center; /* 세로 가운데 정렬 추가 */
 }
 
+mb-3 {
+    width: 100%;
+    height: 40vh;
+    margin: 0 !important;
+}
+
 /* 상단 메뉴 */
 .top {
     color: white;
@@ -269,10 +275,33 @@ a:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin: 5px 0;
-    width: 90%;
+    width: 95%;
 }
+
+.user-info2 {
+    background-color: transparent;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px 0;
+    width: 100%;
+}
+
+.col-md-4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+#upload-image-button {
+    padding: 0;
+}
+
 
 /* 수정 및 삭제 버튼 스타일 */
 .edit-delete-buttons{
@@ -296,13 +325,14 @@ a:hover {
 
 .user-info-list {
     display: flex;
-    flex-direction: column; /* 항목을 수직으로 쌓습니다 */
-    max-height: 90vh; /* 컨텐츠의 최대 높이 설정 */
-    overflow-y: auto; /* 컨텐츠가 넘칠 때 수직 스크롤바를 추가합니다 */
+    flex-direction: column;
+    max-height: 90vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     gap: 10px;
-    width: 90%; /* 건욱님 코드는 80%*/
-    justify-content: flex-start; /* 요소들을 왼쪽 정렬로 유지 */
-    align-items: flex-start; /* 요소들을 위쪽 정렬로 유지 */
+    width: 90%;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .user-info-list::-webkit-scrollbar {
