--- a/src/main/resources/templates/searchedPage.html
+++ b/src/main/resources/templates/searchedPage.html
@@ -188,7 +188,7 @@
       <ul class="pagination justify-content-center custom-pagination">
         <li class="page-item" th:classappend="${!posts.hasPrevious()} ? 'disabled'">
           <a class="page-link"
-             th:href="@{|?page=${posts.getPageable().getPageNumber() - 1}|}">
+             th:href="@{|?title=${searchedTitle}&page=${posts.getPageable().getPageNumber() - 1}|}">
             <span>이전</span>
           </a>
         </li>
@@ -196,13 +196,13 @@
             th:if="${page >= page - 5 and page <= page + 5}"
             class="page-item">
           <a th:text="${page + 1}" class="page-link"
-             th:href="@{|?page=${page + 1}|}"
+             th:href="@{|?title=${searchedTitle}&page=${page + 1}|}"
              th:style="${page == posts.getPageable().getPageNumber()} ? 'background-color: #f5f5fa;' : ''">1</a>
         </li>
 
 
         <li class="page-item" th:classappend="${!posts.hasNext()} ? 'disabled'">
-          <a class="page-link" th:href="@{|/page=${posts.getPageable().getPageNumber() + 2}|}">
+          <a class="page-link" th:href="@{|/api/posts/categories/${category}/titles?title=${searchedTitle}&page=${posts.getPageable().getPageNumber() + 2}|}">
             <span>다음</span>
           </a>
         </li>
